Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,9 +23,9 @@ html {
 }
 
 .stop-scrolling {
-  position: fixed;
-  overflow-y: scroll;
-  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0 0 1px;
 }
 
 @font-face {
@@ -505,7 +505,7 @@ select:-webkit-autofill:focus {
 
 .footer__copyright {
   text-align: center;
-  font-size: max(14px, 1.25vh);
+  font-size: max(14px, 1.5vh);
   margin-top: 1.7vh;
 }
 
@@ -1564,7 +1564,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 80px;
+  width: 90px;
 }
 
 .wp-intro__progress__bar {
